# index-registry

./: .gitattributes  MODULE.bazel  README.md
.github/workflows/: README.md  add_dependency.yml  add_module.yml  bump_minor.yml  bump_patch.yml  bump_version.yml  call_add_module.yml  call_bump_version.yml  call_update_dependency.yml  check_version_bump.yml  resolve_dependents.yml  set_bazel_version.yml  set_tag.yml  tag_based_on_bazel.yml  update_dependency.yml
docs/: adding_a_library.md  updating_a_library.md
modules/CRCpp/: metadata.json
modules/absl/: metadata.json
modules/ad_rss_lib/: metadata.json
modules/apriltag/: metadata.json
modules/benchmark/: metadata.json
modules/boost/: metadata.json
modules/boost_for_gtsam/: metadata.json
modules/civetweb/: metadata.json
modules/concurrentqueue/: metadata.json
modules/cpplint/: metadata.json
modules/crcpp/: metadata.json
modules/curl/: metadata.json
modules/eigen/: metadata.json
modules/foxglove_schemas/: metadata.json
modules/freertos/: metadata.json
modules/ftxui/: metadata.json
modules/grpc/: metadata.json
modules/gtsam/: metadata.json
modules/guardrail/: metadata.json
modules/libfluent/: metadata.json
modules/msgpack/: metadata.json
modules/nlohmann_json/: metadata.json
modules/paddleinference/: metadata.json
modules/pattern_cpp_logging/: MODULE.bazel  logging.bzl  logging.h
modules/pattern_tools/: metadata.json
modules/pcapplusplus/: metadata.json
modules/pigpio/: metadata.json
tools/: README.md  add_module.py  bcr_validation.py  registry.py
(+635 files in other folders)
