module(
    name = "ThomasTestRepo",
    version = "0.33.1",
    compatibility_level = None,
)
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_python", version = "0.12.0")
bazel_dep(name = "googletest", version = "1.11.0")
bazel_dep(name = "pattern_tools", version = "0.36.1")
bazel_dep(name = "nlohmann_json", version = "3.8.0")
bazel_dep(name = "CRCpp", version = "1.2.0")
bazel_dep(name = "guardrail", version = "0.33.0")

python_configure_ext = use_extension("@pattern_tools//python_config:extension.bzl", "python_configure_ext")
use_repo(python_configure_ext, "local_config_python")

